# cpark

./: .clang-format  .gitignore  CMakeLists.txt  README.md  doxygen.conf  performance.md  style_agreements.md  tutorial.md  use_cases.md
docs/: annotated.html  base__rdd_8h_source.html  calculate_pi_8cpp-example.html  class_base_rdd_test-members.html  class_base_rdd_test.html  class_config_test-members.html  class_config_test.html  class_execution_context_test-members.html  class_execution_context_test.html  class_field_helper-members.html  class_field_helper.html  class_instantiation_in_multiple_translation_units_test-members.html  class_instantiation_in_multiple_translation_units_test.html  class_merged_same_view-members.html  class_merged_same_view.html  class_merged_same_view_1_1_iterator.html  class_merged_two_diff_view-members.html  class_merged_two_diff_view_1_1_iterator.html  class_mock-members.html  class_my_string.html  class_prime_table.html  class_private_code-members.html  class_private_code.html  class_queue_node-members.html  classcpark_1_1_base_rdd-members.html  classcpark_1_1_base_rdd.html  classcpark_1_1_base_split-members.html  classcpark_1_1_base_split.html  classcpark_1_1_cached_split-members.html  classcpark_1_1_cached_split.html  classcpark_1_1_cached_split_1_1_iterator-members.html  classcpark_1_1_cached_split_1_1_iterator.html  classcpark_1_1_collect-members.html  classcpark_1_1_collect.html  classcpark_1_1_config-members.html  classcpark_1_1_config.html  classcpark_1_1_count-members.html  classcpark_1_1_count.html  classcpark_1_1_execution_context-members.html  classcpark_1_1_execution_context.html  (+429 more)
examples/: calculate_pi.cpp  collect_partitions.cpp  filter_even.cpp  flatmap_test.cpp  merge_splits.cpp  simple.cpp  speed_check.cpp
html/: class_bar_environment-members.html  class_bar_environment.html  class_base-members.html  class_base.html  class_biggest_int_convertible-members.html  class_biggest_int_convertible.html  class_child_class_with_stream_operator.html  class_child_class_without_stream_operator.html  class_comment_test.html  class_common_test-members.html  class_common_test.html  class_construct_from_t-members.html  class_construct_from_t.html  class_container_test-members.html  class_container_test.html  class_conversion_helper_base.html  class_conversion_helper_derived.html  class_counter-members.html  class_counter.html  class_custom_function_naming_test-members.html  class_custom_function_naming_test.html  class_custom_functor_naming_test-members.html  class_custom_functor_naming_test.html  class_custom_integer_naming_test-members.html  class_custom_integer_naming_test.html  class_custom_lambda_naming_test-members.html  class_custom_lambda_naming_test.html  class_custom_struct_naming_test.html  class_derived_test-members.html  class_derived_test.html  class_detect_not_instantiated_test-members.html  class_detect_not_instantiated_test.html  class_detect_not_instantiated_types_test-members.html  class_detect_not_instantiated_types_test.html  class_disabled_test.html  class_dog_adder-members.html  class_dog_adder.html  class_dynamic_fixture-members.html  class_dynamic_fixture.html  class_dynamic_test-members.html  (+844 more)
include/: base_rdd.h  collect.h  count.h  cpark.h  filter_rdd.h  flatmap_rdd.h  generator_rdd.h  group_by_key_rdd.h  merge_rdd.h  merged_view.h  partition_by_rdd.h  plain_rdd.h  rdd.h  reduce.h  sample_rdd.h  transformed_rdd.h  union_rdd.h  utils.h  zip_rdd.h  zipped_rdd.h
latex/: annotated.tex  base__rdd_8h_source.tex  calculate_pi_8cpp-example.tex  classcpark_1_1_base_rdd.eps  classcpark_1_1_base_rdd.tex  classcpark_1_1_base_split.eps  classcpark_1_1_base_split.tex  classcpark_1_1_cached_split.eps  classcpark_1_1_cached_split.tex  classcpark_1_1_cached_split_1_1_iterator.eps  classcpark_1_1_cached_split_1_1_iterator.tex  classcpark_1_1_collect.tex  classcpark_1_1_config.tex  classcpark_1_1_count.tex  classcpark_1_1_execution_context.tex  classcpark_1_1_filter.tex  classcpark_1_1_filter_rdd.eps  (+105 more)
(+148 files in other folders)
